--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,12 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/gjrdiesel/dusk"
+        }
+    ],
     "keywords": [
         "framework",
         "laravel"
@@ -10,6 +16,7 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "laravel/dusk": "dev-master",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0"
     },
@@ -45,8 +52,7 @@
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
+    "prefer-stable": false,
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
