--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,6 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/gjrdiesel/dusk"
-        }
-    ],
     "keywords": [
         "framework",
         "laravel"
@@ -16,9 +10,9 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
-        "laravel/dusk": "dev-master",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "spatie/browsershot": "^3.26"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
